--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
         <title>Index</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="CSS/Index.css">
+        <link rel="stylesheet" href="Index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
@@ -16,6 +16,72 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        
+        <header>
+            <div class="logo_container">
+                <a href="#" class="logo">Startup</a>
+            </div>
+            <menu class="navigation_menu">
+                <il class="menu_elements">
+                    <a href="#Home">Home</a>
+                </il>
+                <il class="menu_elements">
+                    <a href="#Services">Services</a>
+                </il>
+                <il class="menu_elements">
+                    <a href="#About">About</a>
+                </il>
+                <il class="menu_elements">
+                    <a href="#Works">Works</a>
+                </il>
+                <il class="menu_elements">
+                    <a href="#Blog">Blog</a>
+                </il>
+                <il class="menu_elements">
+                    <a href="#Clients">Clients</a>
+                </il>
+                <il class="menu_elements">
+                    <a href="#Contact">Contact</a>
+                </il>
+            </menu>
+        </header>
+
+        <section class="home" id="Home">
+            <div class="home_elements">
+                <h2 class="home_welcome">welcome to startup</h2>
+                <p class="home_welcome_description">your favourite creative agency template</p>
+                <button class="home_get_started">get started</button>
+            </div>
+        </section>
+
+        <section class="services" id="Services">
+            <h2 class="services_title">services</h2>
+            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="50px" height="2px">
+                <path fill-rule="evenodd"  fill="rgb(85, 85, 85)" d="M0.000,1.1000 L0.000,-0.001 L49.1000,-0.001 L49.1000,1.1000 L0.000,1.1000 "/>
+            </svg>
+            <p class="services_title_description">we offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+            <div class="services_elements">
+                <div class="services_element">
+                    <div class="service_ico_conteyner">
+                        <i class="ico fa fa-font" aria-hidden="true"></i>
+                    </div>
+                    <h3 class="service_ico_title">clean typography</h3>
+                    <p class="servicer_ico_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+                </div>
+                <div class="services_element">
+                    <div class="service_ico_conteyner">
+                        <i class="ico fa fa-code" aria-hidden="true"></i>
+                    </div>
+                    <h3 class="service_ico_title">rock solid code</h3>
+                    <p class="servicer_ico_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+                </div>
+                <div class="services_element">
+                    <div class="service_ico_conteyner">
+                        <i class="ico fa fa-life-ring" aria-hidden="true"></i>
+                    </div>
+                    <h3 class="service_ico_title">expert support</h3>
+                    <p class="servicer_ico_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
