--- a/Index.html
+++ b/Index.html
@@ -54,11 +54,11 @@
         </section>
 
         <section class="services" id="Services">
-            <h2 class="services_title">services</h2>
+            <h2 class="section_title">services</h2>
             <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="50px" height="2px">
                 <path fill-rule="evenodd"  fill="rgb(85, 85, 85)" d="M0.000,1.1000 L0.000,-0.001 L49.1000,-0.001 L49.1000,1.1000 L0.000,1.1000 "/>
             </svg>
-            <p class="services_title_description">we offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
+            <p class="section_title_description">we offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
             <div class="services_elements">
                 <div class="services_element">
                     <div class="service_ico_conteyner">
@@ -81,6 +81,34 @@
                     <h3 class="service_ico_title">expert support</h3>
                     <p class="servicer_ico_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Lorem ipsum.</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="about" id="About" >
+            <h2 class="section_title">about as</h2>
+            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="50px" height="2px">
+                <path fill-rule="evenodd"  fill="rgb(85, 85, 85)" d="M0.000,1.1000 L0.000,-0.001 L49.1000,-0.001 L49.1000,1.1000 L0.000,1.1000 "/>
+            </svg>
+            <p class="section_title_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit amet</p>
+            <div class="about_description_conteyner">
+                <div class="about_description_block">
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirmod
+                        tempor invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos et
+                        accusam et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                        sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat.
+                        Lorem ipsum dolor sit amet. Lorem ipsum eat.
+                    </p>
+                </div>
+                <div class="about_description_block">
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sediam nonumy eirtempor
+                        invidunt ut labore et dolore aliquyam erat, sed diam voluptua. At vero eos eaccusam
+                        et justo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                        Lorem ipsum dolor sit amet. Lorem ipsum dolor et dolore aliquyam erat. Loreipsum
+                        dolor sit amet. Lorem ipsum dolor et.
+                    </p>    
+                </div>  
             </div>
         </section>
     </body>
