--- a/Index.html
+++ b/Index.html
@@ -7,13 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Index.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="preload" href="Fonts/Roboto-Slab-Regular.woff2" as="font">
+        <link rel="preload" href="Fonts/Roboto-Slab-Regular.woff" as="font">
     </head>
     <body>
         <header>
@@ -46,6 +43,7 @@
         </header>
 
         <section class="home" id="Home">
+            <div class="home_bg_toner"></div>
             <div class="home_elements">
                 <h2 class="home_welcome">welcome to startup</h2>
                 <p class="home_welcome_description">your favourite creative agency template</p>
@@ -110,6 +108,236 @@
                     </p>    
                 </div>  
             </div>
+            <div class="employers_slider">
+
+                <div class="employers_card">
+                    <div class="employer_foto_container">
+                        <img class="employer_foto" src="Assets/3_About_us/employer_1.png" alt="employer_1">
+                        <div class="employer_contacts">
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="employer_name">md. khalil uddin</p>
+                    <p class="employer_post">Head of ideas</p>
+                </div>
+
+                <div class="employers_card">
+                    <div class="employer_foto_container">
+                        <img class="employer_foto" src="Assets/3_About_us/employer_2.png" alt="employer_2">
+                        <div class="employer_contacts">
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="employer_name">rubel miah</p>
+                    <p class="employer_post">lead WordPress Developer</p>
+                </div>
+
+                <div class="employers_card">
+                    <div class="employer_foto_container">
+                        <img class="employer_foto" src="Assets/3_About_us/employer_3.png" alt="employer_3">
+                        <div class="employer_contacts">
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="employer_name">shamim mia</p>
+                    <p class="employer_post">Sr. Web Developer</p>
+                </div>
+
+                <div class="employers_card">
+                    <div class="employer_foto_container">
+                        <img class="employer_foto" src="Assets/3_About_us/employer_4.png" alt="employer_4">
+                        <div class="employer_contacts">
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                            </div>
+                            <div class="employer_link_conteyner">
+                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="employer_name">john doe</p>
+                    <p class="employer_post">Front-end Developer</p>
+                </div>
+
+                <div class="slider_left_button_block">
+                    <button class="employer_slider_left_angel">
+                        <i class="employer_slider_angel fa fa-angle-left" aria-hidden="true"></i>
+                    </button>
+                </div>
+                <div class="slider_right_button_block">
+                    <button class="employer_slider_right_angel">
+                        <i class="employer_slider_angel fa fa-angle-right" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </div>
         </section>
+
+        <section class="works" id="Works">
+            <h2 class="section_title">latest works</h2>
+            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="50px" height="2px">
+                <path fill-rule="evenodd"  fill="rgb(85, 85, 85)" d="M0.000,1.1000 L0.000,-0.001 L49.1000,-0.001 L49.1000,1.1000 L0.000,1.1000 "/>
+            </svg>
+            <menu class="works_filters">
+                <li class="works_filter active">
+                    <a href="#Works">all</a>
+                </li>
+                <li class="works_filter">
+                    <a href="#Works" aria-current="true">branding</a>
+                </li>
+                <li class="works_filter">
+                    <a href="#Works">design</a>
+                </li>
+                <li class="works_filter">
+                    <a href="#Works">development</a>
+                </li>
+                <li class="works_filter">
+                    <a href="#Works">strategy</a>
+                </li>
+            </menu>
+
+
+
+            <div class="works-illustration-container">
+                <div class="illustration-level">
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 1.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 2.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 3.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="illustration-level">
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 4.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 5.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 6.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="illustration-level">
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 7.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 8.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_Works/Rectangle 9.png">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        
     </body>
 </html>
