--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru"> 
+<html lang="en-GB"> 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Index</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Index.css">
+        <link rel="stylesheet" href="index.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="preload" href="Fonts/Roboto-Slab-Regular.woff2" as="font">
-        <link rel="preload" href="Fonts/Roboto-Slab-Regular.woff" as="font">
+        <link rel="preload" href="fonts/Roboto-Slab-Regular.woff2" as="font">
+        <link rel="preload" href="fonts/Roboto-Slab-Regular.woff" as="font">
     </head>
     <body>
         <header>
@@ -18,27 +18,27 @@
                 <a href="#" class="logo">Startup</a>
             </div>
             <menu class="navigation_menu">
-                <il class="menu_elements">
+                <li class="menu_elements">
                     <a href="#Home">Home</a>
-                </il>
-                <il class="menu_elements">
+                </li>
+                <li class="menu_elements">
                     <a href="#Services">Services</a>
-                </il>
-                <il class="menu_elements">
+                </li>
+                <li class="menu_elements">
                     <a href="#About">About</a>
-                </il>
-                <il class="menu_elements">
+                </li>
+                <li class="menu_elements">
                     <a href="#Works">Works</a>
-                </il>
-                <il class="menu_elements">
+                </li>
+                <li class="menu_elements">
                     <a href="#Blog">Blog</a>
-                </il>
-                <il class="menu_elements">
+                </li>
+                <li class="menu_elements">
                     <a href="#Clients">Clients</a>
-                </il>
-                <il class="menu_elements">
+                </li>
+                <li class="menu_elements">
                     <a href="#Contact">Contact</a>
-                </il>
+                </li>
             </menu>
         </header>
 
@@ -53,7 +53,7 @@
 
         <section class="services" id="Services">
             <h2 class="section_title">services</h2>
-            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="50px" height="2px">
+            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="2px">
                 <path fill-rule="evenodd"  fill="rgb(85, 85, 85)" d="M0.000,1.1000 L0.000,-0.001 L49.1000,-0.001 L49.1000,1.1000 L0.000,1.1000 "/>
             </svg>
             <p class="section_title_description">we offer ipsum dolor sit amet, consetetur sadipscing elitr amet</p>
@@ -84,7 +84,7 @@
 
         <section class="about" id="About" >
             <h2 class="section_title">about as</h2>
-            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="50px" height="2px">
+            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="2px">
                 <path fill-rule="evenodd"  fill="rgb(85, 85, 85)" d="M0.000,1.1000 L0.000,-0.001 L49.1000,-0.001 L49.1000,1.1000 L0.000,1.1000 "/>
             </svg>
             <p class="section_title_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit amet</p>
@@ -112,19 +112,19 @@
 
                 <div class="employers_card">
                     <div class="employer_foto_container">
-                        <img class="employer_foto" src="Assets/3_About_us/employer_1.png" alt="employer_1">
+                        <img class="employer_foto" src="assets/3_about_us/employer_1.png" alt="employer_1">
                         <div class="employer_contacts">
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/facebook_logo.png" alt="facebook_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/twitter-logo-silhouette.png" alt="twitter-logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/google_plus_logo.png" alt="google_plus_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/fa-linkedin.png" alt="linkedin-logo"></a>
                             </div>
                         </div>
                     </div>
@@ -137,16 +137,16 @@
                         <img class="employer_foto" src="Assets/3_About_us/employer_2.png" alt="employer_2">
                         <div class="employer_contacts">
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/facebook_logo.png" alt="facebook_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/twitter-logo-silhouette.png" alt="twitter-logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/google_plus_logo.png" alt="google_plus_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/fa-linkedin.png" alt="linkedin-logo"></a>
                             </div>
                         </div>
                     </div>
@@ -159,16 +159,16 @@
                         <img class="employer_foto" src="Assets/3_About_us/employer_3.png" alt="employer_3">
                         <div class="employer_contacts">
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/facebook_logo.png" alt="facebook_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/twitter-logo-silhouette.png" alt="twitter-logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/google_plus_logo.png" alt="google_plus_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/fa-linkedin.png" alt="linkedin-logo"></a>
                             </div>
                         </div>
                     </div>
@@ -181,16 +181,16 @@
                         <img class="employer_foto" src="Assets/3_About_us/employer_4.png" alt="employer_4">
                         <div class="employer_contacts">
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Facebook Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/facebook_logo.png" alt="facebook_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Twitter Logo Silhouette.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/twitter-logo-silhouette.png" alt="twitter-logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/Google Plus Logo.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/google_plus_logo.png" alt="google_plus_logo"></a>
                             </div>
                             <div class="employer_link_conteyner">
-                                <a class="employer_contacts_fotolink" href="#"><img src="Assets/3_About_us/fa-linkedin.png"></a>
+                                <a class="employer_contacts_fotolink" href="#"><img src="assets/3_about_us/fa-linkedin.png" alt="linkedin-logo"></a>
                             </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@
 
         <section class="works" id="Works">
             <h2 class="section_title">latest works</h2>
-            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"width="50px" height="2px">
+            <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50px" height="2px">
                 <path fill-rule="evenodd"  fill="rgb(85, 85, 85)" d="M0.000,1.1000 L0.000,-0.001 L49.1000,-0.001 L49.1000,1.1000 L0.000,1.1000 "/>
             </svg>
             <menu class="works_filters">
@@ -239,7 +239,7 @@
             <div class="works-illustration-container">
                 <div class="illustration-level">
                     <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 1.png">
+                        <img src="assets/4_works/rectangle_1.png" alt="picture">
                         <div class="caption">
                             <h3 class="work-name">hair dresser</h3>
                             <p class="work-type">branding</p>
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                     <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 2.png">
+                        <img src="assets/4_works/rectangle_2.png" alt="picture">
                         <div class="caption">
                             <h3 class="work-name">hair dresser</h3>
                             <p class="work-type">branding</p>
@@ -259,39 +259,7 @@
                         </div>
                     </div>
                     <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 3.png">
-                        <div class="caption">
-                            <h3 class="work-name">hair dresser</h3>
-                            <p class="work-type">branding</p>
-                            <button class="work-view">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="illustration-level">
-                    <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 4.png">
-                        <div class="caption">
-                            <h3 class="work-name">hair dresser</h3>
-                            <p class="work-type">branding</p>
-                            <button class="work-view">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 5.png">
-                        <div class="caption">
-                            <h3 class="work-name">hair dresser</h3>
-                            <p class="work-type">branding</p>
-                            <button class="work-view">
-                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 6.png">
+                        <img src="assets/4_works/rectangle_3.png" alt="picture">
                         <div class="caption">
                             <h3 class="work-name">hair dresser</h3>
                             <p class="work-type">branding</p>
@@ -303,7 +271,7 @@
                 </div>
                 <div class="illustration-level">
                     <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 7.png">
+                        <img src="assets/4_works/rectangle_4.png" alt="picture">
                         <div class="caption">
                             <h3 class="work-name">hair dresser</h3>
                             <p class="work-type">branding</p>
@@ -313,7 +281,7 @@
                         </div>
                     </div>
                     <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 8.png">
+                        <img src="assets/4_works/rectangle_5.png" alt="picture">
                         <div class="caption">
                             <h3 class="work-name">hair dresser</h3>
                             <p class="work-type">branding</p>
@@ -323,7 +291,39 @@
                         </div>
                     </div>
                     <div class="work-illustration">
-                        <img src="assets/4_Works/Rectangle 9.png">
+                        <img src="assets/4_works/rectangle_6.png" alt="picture">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="illustration-level">
+                    <div class="work-illustration">
+                        <img src="assets/4_works/rectangle_7.png" alt="picture">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_works/rectangle_8.png" alt="picture">
+                        <div class="caption">
+                            <h3 class="work-name">hair dresser</h3>
+                            <p class="work-type">branding</p>
+                            <button class="work-view">
+                                view<i class="fa fa-angle-right" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="work-illustration">
+                        <img src="assets/4_works/rectangle_9.png" alt="picture">
                         <div class="caption">
                             <h3 class="work-name">hair dresser</h3>
                             <p class="work-type">branding</p>
