--- a/Index.html
+++ b/Index.html
@@ -17,25 +17,25 @@
                 <a href="#">Startup</a>
             </div>
             <menu class="navigation-menu">
-                <li class="menu-elements">
+                <li class="navigation-menu__element">
                     <a href="#Home">Home</a>
                 </li>
-                <li class="menu-elements">
+                <li class="navigation-menu__element">
                     <a href="#Services">Services</a>
                 </li>
-                <li class="menu-elements">
+                <li class="navigation-menu__element">
                     <a href="#About">About</a>
                 </li>
-                <li class="menu-elements">
+                <li class="navigation-menu__element">
                     <a href="#Works">Works</a>
                 </li>
-                <li class="menu-elements">
+                <li class="navigation-menu__element">
                     <a href="#Blog">Blog</a>
                 </li>
-                <li class="menu-elements">
+                <li class="navigation-menu__element">
                     <a href="#Clients">Clients</a>
                 </li>
-                <li class="menu-elements">
+                <li class="navigation-menu__element">
                     <a href="#Contact">Contact</a>
                 </li>
             </menu>
@@ -368,19 +368,11 @@
                             </div>
                             <div class="text__description">
                                 <p>
-                                    Lorem ipsum dolor sit amet, 
-                                    consetetur sadipscing elitr, 
-                                    sediam nonumy eirmod tempor 
-                                    invidunt ut labore et dolore 
-                                    aliquyam erat, sed diam 
-                                    voluptua. At vero eos et 
-                                    accusam et justo dolores 
-                                    et ea rebum. Stet clita 
-                                    kasd gubergren, no sea takimata 
-                                    sanctus est Lorem ipsum dolor sit 
-                                    amet. Lorem ipsum dolor et dolore 
-                                    aliquyam erat. Lorem ipsum dolor 
-                                    sit amet. Lorem ipsum eat.
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabor
+                                    et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                                    erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem 
+                                    ipsum dolor sit am Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidulabore
+                                    et dolore aliquyam erat, sed diam 
                                 </p>
                             </div>
                             <a class="text__read-more-link" href="#">
@@ -414,19 +406,11 @@
                             </div>
                             <div class="text__description">
                                 <p>
-                                    Lorem ipsum dolor sit amet, 
-                                    consetetur sadipscing elitr, 
-                                    sediam nonumy eirmod tempor 
-                                    invidunt ut labore et dolore 
-                                    aliquyam erat, sed diam 
-                                    voluptua. At vero eos et 
-                                    accusam et justo dolores 
-                                    et ea rebum. Stet clita 
-                                    kasd gubergren, no sea takimata 
-                                    sanctus est Lorem ipsum dolor sit 
-                                    amet. Lorem ipsum dolor et dolore 
-                                    aliquyam erat. Lorem ipsum dolor 
-                                    sit amet. Lorem ipsum eat.
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod teduntlabore
+                                    et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+                                    erebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                                    idunt ut labore et dolore aliquyam 
                                 </p>
                             </div>
                             <a class="text__read-more-link" href="#">
